Bug 886281 - Constrain the absolutely positioned glass fog using overflow-y: hidden to avoid overlapping layers, r=jaws

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -244,6 +244,11 @@
     z-index: -1;
   }
 
+  /* Need to constrain the glass fog to avoid overlapping layers, see bug 886281. */
+  #navigator-toolbox:not(:-moz-lwtheme) {
+    overflow-y: hidden;
+  }
+
   #main-window[sizemode=normal] .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox > .scrollbox-innerbox:not(:-moz-lwtheme) {
     position: relative;
   }
